more formatting and color scheming

--- a/main/Templates/main/home.html
+++ b/main/Templates/main/home.html
@@ -10,33 +10,47 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="">
+  <link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet'>
+
 
 <style>
 
 * {
   box-sizing: border-box;
-  background-color: rgb(155, 220, 180);
+  /*background-color: rgb(91, 155, 81);*/
+  background-color: aliceblue;
+
 }
 
 .header-main {
-  margin: 20px;
-  font-family: "Lucida Console", Courier, monospace;
-  font-size: 24px;
+  background-color: aliceblue;
+  margin: 5px;
+  padding: -5px;
+  font-family: "Armata";
 }
-
+.header-main > h1 {
+  background-color: rgb(60, 100, 80);
+  font-family: "Armata";
+  font-size: 40px;
+  padding: 10px;
+  color: white;
+  border: 15px solid rgb(155, 220, 180);
+}
+/*
 .header-main > h3 {
-  font-family: "Lucida Console", Courier, monospace;
+  background-color: aliceblue;
+  font-family: "Armata";
   font-size: 18px;
-  border: 10px yellow;
-
-}
+  padding: 5px;
+  border: 6px solid rgb(8, 10, 24);
+}*/
 
 .main {
   width: 75%;
   float: left;
-  padding: 15px;
-  border: 3px solid red;
-  background-color: rgb(196, 248, 255);
+  padding: 35px;
+  border: 10px solid rgb(155, 220, 180);
+  background-color: rgb(60, 100, 80);
 }
 
 .menu {
@@ -44,38 +58,34 @@
   flex-direction: column;
   width: 25%;
   float: left;
-  padding: 15px;
-  margin: 10px white;
-  border: 10px solid mediumseagreen;
-  background-color:  #f1f1f1;
+  padding: 5px;
+  border: 10px solid aliceblue;
+  background-color: aliceblue;
 }
 
 .menu > div {
-  background-color: blueviolet;
-  width: 100px;
-  margin: 15px blueviolet;
+  background-color: aliceblue;
+  width: 60px;
   text-align: center;
-  line-height: 75px;
+  line-height: 15px;
   font-size: 20px;
-  font-family: "Lucida Console", Courier, monospace;
+  padding: 5px;
+  font-family: "Armata";
+  border: 5px solid blueviolet
 }
 
 
 .category {
-  background-color: blueviolet;
-  width: 100px;
-  margin: 20px;
+  margin: 15px;
   text-align: center;
-  line-height: 75px;
   font-size: 30px;
-  font-family: "Lucida Console", Courier, monospace;
-
+  font-family: "Armata";
 }
 
 .category > div {
   text-align: center;
-  font-family: "Lucida Console", Courier, monospace;
-  border: 15px white;
+  line-height: 50px;
+  font-family: "Armata";
 }
 
 </style>
