boxed news containers

--- a/main/Templates/main/home.html
+++ b/main/Templates/main/home.html
@@ -18,27 +18,27 @@
 * {
   box-sizing: border-box;
   /*background-color: rgb(91, 155, 81);*/
-  background-color: aliceblue;
+  background-color: rgb(255, 255, 255);
 
 }
 
 .header-main {
-  background-color: aliceblue;
+  background-color: rgb(255, 255, 255);
   margin: 5px;
   padding: -5px;
   font-family: "Armata";
 }
 .header-main > h1 {
-  background-color: rgb(60, 100, 80);
-  font-family: "Armata";
+  background-color: rgb(146, 144, 144);
+  font-family: "Consolas";
   font-size: 40px;
   padding: 10px;
-  color: white;
-  border: 15px solid rgb(155, 220, 180);
+  color: red;
+  border: 15px solid rgb(255, 255, 255);
 }
 /*
 .header-main > h3 {
-  background-color: aliceblue;
+  background-color: rgb(255, 255, 255);
   font-family: "Armata";
   font-size: 18px;
   padding: 5px;
@@ -49,8 +49,33 @@
   width: 75%;
   float: left;
   padding: 35px;
-  border: 10px solid rgb(155, 220, 180);
-  background-color: rgb(60, 100, 80);
+  border: 10px solid rgb(255, 255, 255);
+  /*background-color: rgb(60, 100, 80);*/
+  background-color: rgb(255, 255, 255);
+}
+
+.item1 { grid-area: header; }
+.item2 { grid-area: menu; }
+.item3 { grid-area: main; }
+.item4 { grid-area: right; }
+.item5 { grid-area: footer; }
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    'header header header header header header'
+    'menu main main main right right'
+    'menu footer footer footer footer footer';
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
 }
 
 .menu {
@@ -59,19 +84,20 @@
   width: 25%;
   float: left;
   padding: 5px;
-  border: 10px solid aliceblue;
-  background-color: aliceblue;
+  border: 10px solid rgb(253, 253, 253);
+  background-color: rgb(255, 255, 255);
 }
 
 .menu > div {
-  background-color: aliceblue;
-  width: 60px;
+  background-color: rgb(255, 255, 255);
+  width: 230px;
   text-align: center;
   line-height: 15px;
   font-size: 20px;
-  padding: 5px;
+  padding: 1px;
   font-family: "Armata";
-  border: 5px solid blueviolet
+  border-left: 20px dotted rgb(155, 220, 180);  
+  border-top: 20px dotted blueviolet;
 }
 
 
@@ -95,7 +121,7 @@
 <body>
 
 <div class="header-main">
-  <h1>AUTOMATIC NEWS</h1>
+  <h1>.auto_matic().news</h1>
   <h3>News you wouldn't think happened ... until it did.</h3>
 </div>
 <br></br>
@@ -115,7 +141,14 @@
 </div>
 
 <div class="main">
-
+  <div class="grid-container">
+    <div class="item1">Header</div>
+    <div class="item2">Menu</div>
+    <div class="item3">Main</div>  
+    <div class="item4">Right</div>
+    <div class="item5">Footer</div>
+  </div>
+ 
 </div>
 
 </body>
