added real styling

--- a/main/Templates/main/home.html
+++ b/main/Templates/main/home.html
@@ -29,21 +29,24 @@
   font-family: "Armata";
 }
 .header-main > h1 {
-  background-color: rgb(146, 144, 144);
+  background-color: rgb(255, 255, 255);
   font-family: "Consolas";
   font-size: 40px;
   padding: 10px;
   color: red;
-  border: 15px solid rgb(255, 255, 255);
+  border-left: 8px solid black;
 }
-/*
+
 .header-main > h3 {
   background-color: rgb(255, 255, 255);
   font-family: "Armata";
   font-size: 18px;
+  color: blue;
   padding: 5px;
-  border: 6px solid rgb(8, 10, 24);
-}*/
+  margin-top: -20px;
+  margin-left: 40px;
+  border-left: 6px solid black;
+}
 
 .main {
   width: 75%;
@@ -67,12 +70,12 @@
     'menu main main main right right'
     'menu footer footer footer footer footer';
   grid-gap: 10px;
-  background-color: #2196F3;
+  background-color: black;
   padding: 10px;
 }
 
 .grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.3);
   text-align: center;
   padding: 20px 0;
   font-size: 30px;
@@ -89,15 +92,15 @@
 }
 
 .menu > div {
-  background-color: rgb(255, 255, 255);
-  width: 230px;
+  background-color: lightblue;
+  width: 80px;
   text-align: center;
   line-height: 15px;
   font-size: 20px;
   padding: 1px;
   font-family: "Armata";
-  border-left: 20px dotted rgb(155, 220, 180);  
-  border-top: 20px dotted blueviolet;
+  color: red;
+  border-left: 6px solid blueviolet;
 }
 
 
@@ -121,8 +124,7 @@
 <body>
 
 <div class="header-main">
-  <h1>.auto_matic().news</h1>
-  <h3>News you wouldn't think happened ... until it did.</h3>
+  <h1>.auto_matic().news <h3>News you wouldn't think happened ... until it did.</h3></h1>
 </div>
 <br></br>
 
