"playing with styling"

--- a/main/Templates/main/home.html
+++ b/main/Templates/main/home.html
@@ -40,7 +40,7 @@
 .header-main > h3 {
   background-color: rgb(255, 255, 255);
   font-family: "Armata";
-  font-size: 18px;
+  font-size: 14px;
   color: blue;
   padding: 5px;
   margin-top: -20px;
@@ -71,13 +71,13 @@
     'menu footer footer footer footer footer';
   grid-gap: 10px;
   background-color: black;
-  padding: 10px;
+  padding: 20px;
 }
 
 .grid-container > div {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: lightskyblue;
   text-align: center;
-  padding: 20px 0;
+  padding: 30px 0;
   font-size: 30px;
 }
 
@@ -87,19 +87,19 @@
   width: 25%;
   float: left;
   padding: 5px;
-  border: 10px solid rgb(253, 253, 253);
+  border: 20px solid black;
   background-color: rgb(255, 255, 255);
 }
 
 .menu > div {
-  background-color: lightblue;
-  width: 80px;
+  background-color: rgb(255, 255, 255);
+  width: 40px;
   text-align: center;
-  line-height: 15px;
+  line-height: 1px;
   font-size: 20px;
-  padding: 1px;
+  padding: 5px;
   font-family: "Armata";
-  color: red;
+  color: black;
   border-left: 6px solid blueviolet;
 }
 
@@ -124,31 +124,31 @@
 <body>
 
 <div class="header-main">
-  <h1>.auto_matic().news <h3>News you wouldn't think happened ... until it did.</h3></h1>
+  <h1>.automatic.news <h3>you wouldn't think these things happened </h3></h1>
 </div>
 <br></br>
 
 <div class="menu">
   <div class="category">
 
-    <h3>Highlights</h3>
+    <h3>general</h3>
   </div>
   <div class="category">
-    <h3>Transportation</h3>
+    <h3>transportation</h3>
   </div>
   <div class="category">
-    <h3>Technology</h3>
+    <h3>technology</h3>
   </div>
   
 </div>
 
 <div class="main">
   <div class="grid-container">
-    <div class="item1">Header</div>
-    <div class="item2">Menu</div>
-    <div class="item3">Main</div>  
-    <div class="item4">Right</div>
-    <div class="item5">Footer</div>
+    <div class="item1">Article 1</div>
+    <div class="item2">Article 2</div>
+    <div class="item3">Article 3</div>  
+    <div class="item4">Article 4</div>
+    <div class="item5">Article 5</div>
   </div>
  
 </div>
